fix: unexpected content wraps of URL links (#1222)

--- a/src/components/Url/index.module.scss
+++ b/src/components/Url/index.module.scss
@@ -25,7 +25,7 @@
   }
 
   p {
-    display: inline-block;
+    display: inline;
     margin: 0;
   }
 
@@ -38,7 +38,8 @@
   p>&,
   li>&,
   span>&,
-  strong>& {
+  strong>&,
+  em>& {
     display: inline-flex;
 
     +.linkWrapper {
